translate more static texts

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -56,7 +56,10 @@
         },
         "title": "قائمة أمنياتي",
         "view_grid": "الصور",
-        "view_list": "القائمة"
+        "view_list": "القائمة",
+        "breadcrumbs": {
+            "home": "الصفحة الرئيسية"
+        }
     },
     "buttons": {
         "add": "إضافة",
@@ -487,14 +490,11 @@
         "disabled": "معاق",
         "enable": "التمكين",
         "enabled_on": "ممكّنة: ",
-        "error": "خطأ",
-        "failed": "فشل!",
         "municipality_restrict": "لا يمكن تغيير هذه الإعدادات بسبب الشروط التي وضعتها البلدية",
         "number_confirmed": "تم تأكيد الرقم",
         "remember_ip": "تذكر عنوان IP",
         "require_2fa_always": "اطلب دائمًا التأكيد باستخدام المصادقة الثنائية (2FA)",
         "require_2fa_ip": "إذا تم استخدام عنوان IP في آخر 48 ساعة، فلا تطلب المصادقة الثنائية (2FA).",
-        "saved": "تم الحفظ!",
         "settings": "الإعدادات",
         "sms_message": "رسالة نصية قصيرة",
         "subtitle": "أضف طبقة أمان إضافية إلى حسابك من خلال تمكين المصادقة الثنائية. يمكنك الاختيار من بين طرق المصادقة التالية: تطبيق Authenticator والمصادقة عبر الرسائل النصية القصيرة.",
@@ -532,7 +532,8 @@
             "provider": "بيئة إدارة المزودين",
             "sponsor": "بيئة إدارة الكفيل",
             "validator": "بيئة إدارة المقيّم",
-            "webshop": "متجر ويب شوب"
+            "webshop": "متجر ويب شوب",
+            "me_app": "أنا-التطبيق"
         },
         "details": {
             "last_activity": "أحدث الأنشطة",
@@ -735,8 +736,13 @@
             "reimbursements": "استرداد التكاليف",
             "reservations": "الحجوزات",
             "security_2fa": "الأمن",
-            "security_sessions": "الجلسات"
-        }
+            "security_sessions": "الجلسات",
+            "aria_label": "قائمة المستخدم",
+            "title": "شخصي"
+        },
+        "main_menu": "القائمة الرئيسية",
+        "open_home": "العودة إلى الصفحة الرئيسية",
+        "start": "ابدأ"
     },
     "week_days": {
         "0": "الإثنين",
@@ -845,7 +851,8 @@
             "description": "يرجى ملاحظة! يجب أن تكون قد أكملت نموذج الطلب بحلول <strong>{{value}}</strong>وإلا فقم بتسجيل الدخول مرة أخرى باستخدام DigiD وابدأ التقديم مرة أخرى."
         },
         "buttons": {
-            "back": "رجوع"
+            "back": "رجوع",
+            "send": "الشحن"
         },
         "declined": {
             "no_note": "لا توجد ملاحظة",
@@ -936,7 +943,8 @@
                 "criterion_same": "{{ name }} {{ value }} \" \" يجب أن تكون .",
                 "footer": {
                     "next": "الخطوة التالية",
-                    "prev": "الخطوة السابقة"
+                    "prev": "الخطوة السابقة",
+                    "apply": "اسأل"
                 },
                 "header_title": "لمحة عامة",
                 "text": "نحتاج إلى المزيد من البيانات. يرجى اتباع الخطوات التالية:"
@@ -951,6 +959,48 @@
             "subtitles": {
                 "step_1": "من خلال هذا النموذج عبر الإنترنت، يمكنك التقدم بطلب للحصول على الأموال المتاحة. ",
                 "step_2": "فهو يتحقق مما إذا كنت تستوفي الشروط بالفعل، ويمكنك التوقف بينهما والمتابعة في وقت آخر."
+            },
+            "fund_request_confirm_criteria": {
+                "confirm_income": "تأكد من دخلك",
+                "confirm_meet_conditions": "أقر بأنني ألتزم بالشروط المذكورة أعلاه.",
+                "declare_conditions": "أنت على وشك التقدم بطلب للحصول على برنامج مشاركة. يجب أن تعلن أنك تستوفي الشروط.",
+                "processing_request": "يرجى الانتظار لحظة، حيث تتم معالجة الطلب حالياً.",
+                "provide_correct_info": "أنا أعلم أن تقديم معلومات غير دقيقة يعاقب عليه القانون، وأنني يجب أن أسدد أي رسوم تلقيتها دون وجه حق أو بشكل زائد، وأنه يمكن تغريمي."
+            },
+            "fund_request_contact_info": {
+                "title": "تفاصيل الاتصال"
+            },
+            "fund_request_email_setup": {
+                "continue_without_email": "المتابعة بدون بريد إلكتروني",
+                "email_required": "لمتابعة الطلب، يرجى إدخال عنوان البريد الإلكتروني الخاص بك",
+                "email_sent": "البريد الإلكتروني المرسل",
+                "email_sent_screen": "تم إرسال رسالة تأكيد بالبريد الإلكتروني",
+                "no_email_info": "إذا لم تترك عنوان بريد إلكتروني، فلن تتلقى رسائل أساسية مثل البريد الإلكتروني الذي يحتوي على رمز الاستجابة السريعة أو عند وجود معاملة. بالإضافة إلى ذلك، يمكنك فقط تسجيل الدخول باستخدام DigiD.",
+                "sign_up_with_email": "تسجيل الدخول باستخدام عنوان البريد الإلكتروني",
+                "skip": "تخطي",
+                "warning": "ملاحظة!"
+            },
+            "fund_request_overview": {
+                "application_summary": "نظرة عامة على الطلب",
+                "check_information": "يرجى التحقق أدناه من صحة التفاصيل التي أدخلتها. يمكنك العودة إلى الخطوات السابقة باستخدام ",
+                "contact_info": "تفاصيل الاتصال المذكورة:",
+                "correct_information": "هل التفاصيل صحيحة؟ ثم اضغط على ",
+                "none": "لا يوجد",
+                "previous_step": "الخطوة السابقة.",
+                "submit_application": "سؤال لـ"
+            },
+            "fund_request_step_criteria": {
+                "make_a_choice": "اختر واحدة"
+            },
+            "fund_request_step_done": {
+                "application_processing": "تم استلام طلبك. ستتم معالجة الطلب في غضون 10 أيام عمل. ستتلقى رسالة بريد إلكتروني بهذا الشأن.",
+                "application_received": "تم استلام الطلب",
+                "back": "رجوع",
+                "error_occurred": "حدث خطأ أثناء التقديم.",
+                "leave_form": "استمارة الإجازة",
+                "reason": "السبب:",
+                "sent": "تم الإرسال",
+                "sign_up": "التسجيل"
             }
         },
         "steps": {
@@ -977,7 +1027,8 @@
         },
         "filters": {
             "active": "نشط",
-            "archive": "الأرشيف"
+            "archive": "الأرشيف",
+            "all_funds": "جميع الائتمانات..."
         },
         "title": "الطلب"
     },
@@ -1017,7 +1068,8 @@
             "description": "قم بتنزيل تطبيق Me من متاجر التطبيقات أدناه. <a href=\"{{download_link}}\">انقر هنا لفتح متجر التطبيقات المناسب مباشرةً</a> على هاتفك أو جهازك اللوحي.",
             "title": "قم بتنزيل Me على هاتفك أو جهازك اللوحي"
         },
-        "title": "نبذة عن تطبيق Me"
+        "title": "نبذة عن تطبيق Me",
+        "img_alt": "أنا-التطبيق"
     },
     "signup_options": {
         "buttons": {
@@ -1710,7 +1762,8 @@
             "potjeswijzer": {
                 "request": "الطلب"
             },
-            "request": "تفعيل"
+            "request": "تفعيل",
+            "bookmark": "إضافة إلى قائمة الرغبات"
         },
         "funds": {
             "fund": "ائتمان:",
@@ -1868,7 +1921,8 @@
             "popup_form": {
                 "description": "يمكنك إلغاء الحجز للتنازل عن عملية الشراء. إذا كنت لا ترغب في إلغاء عملية الشراء هذه، انقر على \"إغلاق\".",
                 "title": "هل تريد إلغاء الحجز قبل الشراء؟"
-            }
+            },
+            "title": "إلغاء الحجز"
         },
         "history": {
             "status": {
@@ -2416,7 +2470,9 @@
             "title": "تفاصيل الحساب"
         },
         "bank_accounts": {
-            "title": "الحساب البنكي"
+            "title": "الحساب البنكي",
+            "iban": "رقم الحساب المصرفي الدولي (IBAN)",
+            "name": "التقادم"
         },
         "breadcrumbs": {
             "home": "الصفحة الرئيسية",
@@ -2432,7 +2488,11 @@
             "title": "تحرير تفاصيل الاتصال"
         },
         "history": {
-            "title": "{{count}} مرات التعديل"
+            "title": "{{count}} مرات التعديل",
+            "from": "من",
+            "modified_by": "تم تعديله بواسطة",
+            "to": "إلى",
+            "you": "أنت"
         },
         "personal": {
             "bsn": "BSN",
@@ -2465,7 +2525,8 @@
                 "sponsor": "الإعلان في",
                 "title": "العنوان"
             },
-            "title": "بيانات الإعلان"
+            "title": "بيانات الإعلان",
+            "code": "الرقم: #: الرمز"
         },
         "empty": {
             "button": "إرسال القسيمة",
@@ -2579,7 +2640,8 @@
                 "rejected": "مرفوض",
                 "waiting": "في انتظار الدفع"
             }
-        }
+        },
+        "title": "تفاصيل التعبئة"
     },
     "reservations": {
         "breadcrumbs": {
@@ -2683,10 +2745,8 @@
         "enter_app_code": "أدخل الرمز المكون من 6 أرقام من داخل التطبيق",
         "enter_sms_code": "أدخل رمز الرسالة النصية القصيرة المكون من 6 أرقام",
         "error_404": "حدث خطأ. يرجى تحديث الصفحة.",
-        "failed": "فشل!",
         "resend_code": "إعادة إرسال الرمز",
         "seconds": "{الوقت} ثانية (ثوانٍ)",
-        "success": "نجحت!",
         "unknown_error": "خطأ غير معروف.",
         "verify": "تحقق"
     },
@@ -2712,7 +2772,6 @@
             "code_sent": "حدث خطأ ما أثناء إرسال الرسالة النصية القصيرة. هل تم إدخال رقم الهاتف الصحيح؟ إذا لم يكن كذلك، حاول مرة أخرى."
         },
         "extra_security": "تم إعداد المصادقة الثنائية بنجاح. أصبح حسابك الآن أكثر أماناً.",
-        "failed": "فشل!",
         "in_app_select": "في التطبيق، حدد",
         "link_phone": "ربط رقم هاتفك",
         "or": "ما إذا كان",
@@ -2723,11 +2782,12 @@
         "select_auth_app": "حدد تطبيق المصادقة الذي تريد استخدامه.",
         "setup_2fa": "إعداد المصادقة الثنائية",
         "setup_account": "إعداد الحساب",
-        "success": "نجحت!",
         "successful_login": "لقد نجح الأمر!",
         "unknown_error": "خطأ غير معروف.",
         "verify": "تحقق",
-        "welcome_back": "لقد قمت بتسجيل الدخول بنجاح باستخدام المصادقة الثنائية. مرحباً بعودتك!"
+        "welcome_back": "لقد قمت بتسجيل الدخول بنجاح باستخدام المصادقة الثنائية. مرحباً بعودتك!",
+        "download_from_app_store": "متجر التطبيقات",
+        "download_from_play_store": "متجر بلاي ستور"
     },
     "modal_fund_help": {
         "chat": "الدردشة",
@@ -2748,7 +2808,6 @@
         "cancel": "إلغاء",
         "choose_another": "اختر صورة أخرى",
         "close": "إغلاق",
-        "error": "خطأ!",
         "instructions": "على اليسار سترى الصورة الأصلية وعلى اليمين الأمثلة. استخدم المربع في الصورة اليسرى لوضع الصورة.",
         "invalid_file": "الملف الذي تم تحميله ليس صورة صالحة، الرجاء تجربة ملف آخر.",
         "invalid_image": "الملف المحدد ليس صورة صالحة.",
@@ -2760,7 +2819,8 @@
         "rotate_right": "أدرها 90 درجة في اتجاه عقارب الساعة",
         "some_invalid_files": "بعض الملفات المحددة ليست صوراً صالحة ويتم تخطيها.",
         "submit": "إرسال",
-        "upload_document": "تحميل مستند"
+        "upload_document": "تحميل مستند",
+        "number": "إظهار رقم الصورة: {{ number }}"
     },
     "modal_physical_card_unlink": {
         "body": {
@@ -2790,7 +2850,8 @@
             },
             "request_new_card": {
                 "confirm": "تأكيد",
-                "order_by_email": "الطلب عن طريق البريد"
+                "order_by_email": "الطلب عن طريق البريد",
+                "cancel": "إلغاء"
             }
         },
         "modal_section": {
@@ -2813,7 +2874,11 @@
             "link_card": {
                 "description": "<br/><br/>يوجد على بطاقتك رمز QR، يوجد أدناه رمزك الشخصي. إذا قمت بإعادة تفعيل البطاقة القديمة يمكنك الاستمرار في استخدامها. هل تحتاج إلى مساعدة؟  اتصل بالرقم 14 050 من الاثنين إلى الجمعة من الساعة 9:00 إلى الساعة 12:00.",
                 "subtitle": "أدخل رمز العميل الشخصي",
-                "title": "تفعيل بطاقتك القديمة"
+                "title": "تفعيل بطاقتك القديمة",
+                "alt_text": "تمريرة جسدية: {{ fund_name }}",
+                "enter_physical_card_number": "أدخل رقم البطاقة الفعلية",
+                "no_old_card": "لا يوجد تصريح مرور قديم؟",
+                "order_card": "اطلب تصريح مرور"
             },
             "request_card_success": {
                 "description": "لقد تلقيت رسالة بريد إلكتروني تؤكد طلبك.",
@@ -3005,7 +3070,8 @@
             "close": "إغلاق",
             "description": "تم إجراء الحجز الخاص بك.",
             "title": "لقد نجح الأمر!"
-        }
+        },
+        "voucher_image_alt": "الائتمان"
     },
     "modal": {
         "buttons": {
@@ -3014,7 +3080,26 @@
             "confirm": "تأكيد"
         },
         "logout": {
-            "description": "يتم تسجيل خروجك تلقائياً بعد 15 دقيقة من عدم النشاط."
+            "description": "يتم تسجيل خروجك تلقائياً بعد 15 دقيقة من عدم النشاط.",
+            "confirm": "تسجيل الدخول",
+            "title": "انتهت صلاحية الجلسة"
+        },
+        "email_voucher_to_me": {
+            "description": "أرسل رمز الاستجابة السريعة إلى بريدي الإلكتروني",
+            "title": "أرسل لي بريد إلكتروني"
+        },
+        "session": {
+            "description": "قد يؤدي إنهاء الجلسة إلى تسجيل خروجك، هل تريد المتابعة؟",
+            "header": "نهاية الجلسة",
+            "title": "نهاية الجلسة"
+        },
+        "sessions": {
+            "description": "لقد تم تسجيل خروجك الآن على جميع الأجهزة، هل تريد المتابعة؟",
+            "title": "إنهاء جميع الجلسات"
+        },
+        "share_voucher": {
+            "description": "يمكنك مشاركة حجزك مع مقدم الخدمة لتمكين الشراء عن بُعد. إذا كان العرض يتعلق بنشاط أو خدمة ما: اكتب في الحقل أدناه المعلومات الإضافية التي يطلبها مقدم الخدمة للمشاركة، مثل: اسمك ورقم هاتفك.",
+            "title": "ملاحظة! يرجى إرسال رسالة إلى مقدم الخدمة قبل مشاركة رمز الاستجابة السريعة."
         }
     },
     "open_in_me": {
@@ -3310,7 +3395,11 @@
             "btn": "عرض جميع النتائج",
             "funds_label": "الائتمان",
             "products_label": "العرض",
-            "providers_label": "المزودون"
+            "providers_label": "المزودون",
+            "found_results": "{{count}} تم العثور على النتائج..."
+        },
+        "aria": {
+            "close_search": "حذف البحث"
         }
     },
     "pre_check": {
@@ -3334,7 +3423,8 @@
         "download_pdf": "التنزيل بصيغة PDF",
         "total_amount": "المبلغ الإجمالي",
         "total_offers": "إجمالي العرض",
-        "your_data": "بياناتك"
+        "your_data": "بياناتك",
+        "record_required": "{{ title }} الحقل إلزامي."
     },
     "navbar": {
         "vergoedingen": {
@@ -3346,5 +3436,59 @@
         "goereeoverflakkee": {
             "funds": "المخططات"
         }
+    },
+    "cookie_banner": {
+        "accept_all": "القبول والمضي قدمًا",
+        "analytics": "ملفات تعريف الارتباط التحليلية",
+        "analytics_description": "يستخدم هذا الموقع الإلكتروني ملفات تعريف الارتباط التحليلية لجمع إحصائيات مجهولة المصدر حول كيفية استخدام الزوار لموقعنا الإلكتروني. تساعدنا هذه المعلومات على تحسين الموقع الإلكتروني وجعله أكثر سهولة في الاستخدام.",
+        "description": "يستخدم هذا الموقع الإلكتروني ملفات تعريف الارتباط لتحسين تجربة المستخدم بشكل عام. بالنقر على \"قبول ومتابعة\"، فإنك توافق على استخدام ملفات تعريف الارتباط كما هو موضح في بيان الخصوصية.",
+        "functional_only": "مطلوب فقط للموقع الإلكتروني",
+        "local_storage": "التخزين المحلي",
+        "local_storage_description": "يتم استخدام التخزين المحلي لضمان عمل الموقع الإلكتروني بشكل صحيح واستمرار المستخدمين في تسجيل الدخول.",
+        "manage_cookies": "إدارة ملفات تعريف الارتباط",
+        "privacy_policy": "بيان الخصوصية",
+        "settings": "إعدادات ملفات تعريف الارتباط",
+        "settings_description": "يستخدم هذا الموقع الإلكتروني ملفات تعريف الارتباط (كوكيز) لجعل الموقع الإلكتروني يعمل بأفضل شكل ممكن، ولتحسين تجربة المستخدم وجمع إحصائيات مجهولة المصدر.",
+        "storage_info": "يستخدم هذا الموقع الإلكتروني ملفات تعريف الارتباط المحلية والتحليلية فقط:",
+        "title": "يستخدم هذا الموقع الإلكتروني ملفات تعريف الارتباط",
+        "view": "عرض "
+    },
+    "logo_title": "إلى الصفحة الرئيسية لـ :المضيف",
+    "push": {
+        "deleted": "تم الحذف",
+        "error": "فشل!",
+        "fund_activation": {
+            "digid_success": "تم تسجيل الدخول باستخدام DigiD.",
+            "success": "تم تفعيل رصيد {اسم_الصندوق} الائتماني!"
+        },
+        "pre_check": {
+            "downloaded": "سيبدأ التنزيل في غضون لحظات قليلة.",
+            "not_available": "هذه الصفحة غير متاحة."
+        },
+        "preferences_emails": {
+            "verification_resent": "تم إرسال بريد التحقق مرة أخرى!"
+        },
+        "profile": {
+            "updated": "تم تحديث المعلومات."
+        },
+        "reimbursement_edit": {
+            "saved": "تم حفظ طلب الإعلان.",
+            "submitted": "تم تقديم طلب الإعلان للمراجعة."
+        },
+        "reimbursement": {
+            "canceled": "تم إلغاء الإعلان."
+        },
+        "reservation": {
+            "canceled": "تم إلغاء الحجز."
+        },
+        "saved": "تم الحفظ!",
+        "sessions": {
+            "terminated": "تم الإنهاء"
+        },
+        "success": "نجحت!"
+    },
+    "read_speaker": {
+        "read_aloud": "اقرأ لـ",
+        "tooltip": "اطلب قراءة النص باستخدام ReadSpeaker webReader"
     }
 }
