--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -219,7 +219,10 @@
         },
         "title": "Мой список желаний",
         "view_grid": "Фотографии",
-        "view_list": "Список"
+        "view_list": "Список",
+        "breadcrumbs": {
+            "home": "Главная"
+        }
     },
     "buttons": {
         "add": "Добавить",
@@ -463,7 +466,8 @@
             "description": "Обратите внимание! Вы должны заполнить форму заявки до <strong>{{value}}</strong>в противном случае снова войдите в систему DigiD и начните заполнение заявки заново."
         },
         "buttons": {
-            "back": "Назад"
+            "back": "Назад",
+            "send": "Доставка"
         },
         "declined": {
             "no_note": "Нет записи",
@@ -554,7 +558,8 @@
                 "criterion_same": "{{ name }} {{ value }} ' ' должно быть .",
                 "footer": {
                     "next": "Следующий шаг",
-                    "prev": "Предыдущий шаг"
+                    "prev": "Предыдущий шаг",
+                    "apply": "Спросите"
                 },
                 "header_title": "Обзор",
                 "text": "Нам нужны дополнительные данные. Пожалуйста, выполните следующие шаги:"
@@ -569,6 +574,48 @@
             "subtitles": {
                 "step_1": "С помощью этой онлайн-формы вы можете подать заявку на получение доступных средств. ",
                 "step_2": "Он проверяет, выполнены ли условия, и вы можете прерваться между ними и продолжить в другое время."
+            },
+            "fund_request_confirm_criteria": {
+                "confirm_income": "Подтвердите свой доход",
+                "confirm_meet_conditions": "Я заявляю, что соблюдаю вышеуказанные условия.",
+                "declare_conditions": "Вы собираетесь подать заявку на участие в программе. Вы должны заявить, что соответствуете условиям.",
+                "processing_request": "Пожалуйста, подождите немного, запрос обрабатывается.",
+                "provide_correct_info": "Я знаю, что предоставление недостоверной информации наказуемо, что я должен вернуть любое вознаграждение, полученное необоснованно или сверх меры, и что на меня может быть наложен штраф."
+            },
+            "fund_request_contact_info": {
+                "title": "Контактная информация"
+            },
+            "fund_request_email_setup": {
+                "continue_without_email": "Продолжение без электронной почты",
+                "email_required": "Чтобы продолжить рассмотрение заявки, введите адрес электронной почты",
+                "email_sent": "Электронная почта отправлена",
+                "email_sent_screen": "Подтверждение было отправлено по электронной почте",
+                "no_email_info": "Если вы не оставите адрес электронной почты, вы не будете получать важные сообщения, такие как письмо с QR-кодом или сообщение о транзакции. Кроме того, вы сможете войти в систему только с помощью DigiD.",
+                "sign_up_with_email": "Войдите в систему, указав адрес электронной почты",
+                "skip": "Скип",
+                "warning": "Обратите внимание!"
+            },
+            "fund_request_overview": {
+                "application_summary": "Обзор запросов",
+                "check_information": "Пожалуйста, проверьте ниже правильность введенных вами данных. Вы можете вернуться к предыдущим шагам с помощью кнопки ",
+                "contact_info": "Указанная контактная информация:",
+                "correct_information": "Все ли данные верны? Затем нажмите на кнопку ",
+                "none": "Нет",
+                "previous_step": "Предыдущий шаг.",
+                "submit_application": "Вопрос к."
+            },
+            "fund_request_step_criteria": {
+                "make_a_choice": "Выберите один"
+            },
+            "fund_request_step_done": {
+                "application_processing": "Ваша заявка получена. Заявка будет обработана в течение 10 рабочих дней. Об этом вы получите сообщение по электронной почте.",
+                "application_received": "Заявка получена",
+                "back": "Назад",
+                "error_occurred": "Во время применения произошла ошибка.",
+                "leave_form": "Форма отпуска",
+                "reason": "Причина:",
+                "sent": "Отправлено!",
+                "sign_up": "Зарегистрироваться"
             }
         },
         "steps": {
@@ -595,7 +642,8 @@
         },
         "filters": {
             "active": "Активный",
-            "archive": "Архив"
+            "archive": "Архив",
+            "all_funds": "Все кредиты..."
         },
         "title": "Запрос"
     },
@@ -1266,7 +1314,8 @@
             "description": "Загрузите приложение Me из указанных ниже магазинов приложений. <a href=\"{{download_link}}\">Нажмите здесь, чтобы</a> открыть <a href=\"{{download_link}}\">соответствующий магазин приложений</a> на вашем телефоне или планшете.",
             "title": "Загрузите меня на свой телефон или планшет"
         },
-        "title": "О приложении \"Я"
+        "title": "О приложении \"Я",
+        "img_alt": "Me-app"
     },
     "meapp_index": {
         "buttons": {
@@ -1315,10 +1364,8 @@
         "enter_app_code": "Введите 6-значный код в приложении",
         "enter_sms_code": "Введите 6-значный код SMS",
         "error_404": "Произошла ошибка. Пожалуйста, обновите страницу.",
-        "failed": "Не удалось!",
         "resend_code": "Повторная отправка кода",
         "seconds": "{время} секунда(ы)",
-        "success": "Успешно!",
         "unknown_error": "Неизвестная ошибка.",
         "verify": "Проверьте"
     },
@@ -1344,7 +1391,6 @@
             "code_sent": "Что-то пошло не так при отправке SMS. Введен ли правильный номер телефона? Если нет, попробуйте еще раз."
         },
         "extra_security": "Двухфакторная аутентификация успешно настроена. Теперь ваша учетная запись стала еще более безопасной.",
-        "failed": "Не удалось!",
         "in_app_select": "В приложении выберите",
         "link_phone": "Свяжите свой номер телефона",
         "or": "Будет ли",
@@ -1355,11 +1401,12 @@
         "select_auth_app": "Выберите приложение для аутентификации, которое вы хотите использовать.",
         "setup_2fa": "Настройка двухфакторной аутентификации",
         "setup_account": "Создайте учетную запись",
-        "success": "Успешно!",
         "successful_login": "Это сработало!",
         "unknown_error": "Неизвестная ошибка.",
         "verify": "Проверьте",
-        "welcome_back": "Вы успешно вошли в систему с помощью двухфакторной аутентификации. С возвращением!"
+        "welcome_back": "Вы успешно вошли в систему с помощью двухфакторной аутентификации. С возвращением!",
+        "download_from_app_store": "App Store",
+        "download_from_play_store": "Play Store"
     },
     "modal_fund_help": {
         "chat": "Чат",
@@ -1380,7 +1427,6 @@
         "cancel": "Отмена",
         "choose_another": "Выберите другое изображение",
         "close": "Закрыть",
-        "error": "Ошибка!",
         "instructions": "Слева вы увидите оригинальное изображение, а справа - примеры. Используйте поле в левом изображении, чтобы расположить картинку.",
         "invalid_file": "Загруженный файл не является правильным изображением, пожалуйста, попробуйте другой файл.",
         "invalid_image": "Выбранный файл не является действительным изображением.",
@@ -1392,7 +1438,8 @@
         "rotate_right": "Поверните на 90 градусов по часовой стрелке",
         "some_invalid_files": "Некоторые из выбранных файлов не являются действительными изображениями и пропускаются.",
         "submit": "Отправить",
-        "upload_document": "Загрузить документ"
+        "upload_document": "Загрузить документ",
+        "number": "Показать номер изображения: {{ number }}"
     },
     "modal_physical_card_unlink": {
         "body": {
@@ -1422,7 +1469,8 @@
             },
             "request_new_card": {
                 "confirm": "Подтвердите",
-                "order_by_email": "Заказать по почте"
+                "order_by_email": "Заказать по почте",
+                "cancel": "Отмена"
             }
         },
         "modal_section": {
@@ -1445,7 +1493,11 @@
             "link_card": {
                 "description": "<br/><br/>На вашем пропуске есть QR-код, ниже - ваш персональный код. Если вы активируете старый пропуск, вы сможете продолжать им пользоваться. Нужна помощь?  Позвоните по телефону 14 050 с понедельника по пятницу с 9.00 до 12.00.",
                 "subtitle": "Введите персональный код клиента",
-                "title": "Активируйте свой старый пропуск"
+                "title": "Активируйте свой старый пропуск",
+                "alt_text": "Физический проход: {{ fund_name }}",
+                "enter_physical_card_number": "Введите номер физической карты",
+                "no_old_card": "Нет старого пропуска?",
+                "order_card": "Заказать пропуск"
             },
             "request_card_success": {
                 "description": "Вы получили электронное письмо с подтверждением заказа.",
@@ -1637,7 +1689,8 @@
             "close": "Закрыть",
             "description": "Ваша бронь сделана.",
             "title": "Это сработало!"
-        }
+        },
+        "voucher_image_alt": "Кредит"
     },
     "modal": {
         "buttons": {
@@ -1646,7 +1699,26 @@
             "confirm": "Подтвердите"
         },
         "logout": {
-            "description": "Вы автоматически выходите из системы через 15 минут бездействия."
+            "description": "Вы автоматически выходите из системы через 15 минут бездействия.",
+            "confirm": "Вход в систему",
+            "title": "Сессия истекла"
+        },
+        "email_voucher_to_me": {
+            "description": "Отправьте QR-код на мой адрес электронной почты",
+            "title": "Отправить по электронной почте"
+        },
+        "session": {
+            "description": "Завершение сеанса может привести к выходу из системы, хотите продолжить?",
+            "header": "Окончание сессии",
+            "title": "Конец сессии"
+        },
+        "sessions": {
+            "description": "Теперь вы вышли из системы на всех устройствах, хотите ли вы продолжить?",
+            "title": "Завершить все сеансы"
+        },
+        "share_voucher": {
+            "description": "Вы можете сообщить поставщику о своем бронировании, чтобы обеспечить возможность дистанционной покупки. Если предложение касается мероприятия или услуги: введите в поле ниже дополнительную информацию, необходимую поставщику для участия, например: ваше имя и номер телефона.",
+            "title": "Примечание! Перед тем как поделиться QR-кодом, отправьте сообщение провайдеру."
         }
     },
     "not_found": {
@@ -2146,7 +2218,8 @@
             "potjeswijzer": {
                 "request": "Запрос"
             },
-            "request": "Активируйте"
+            "request": "Активируйте",
+            "bookmark": "Добавить в список желаний"
         },
         "funds": {
             "fund": "Кредит:",
@@ -2268,7 +2341,9 @@
             "title": "Детали счета"
         },
         "bank_accounts": {
-            "title": "Банковский счет"
+            "title": "Банковский счет",
+            "iban": "IBAN",
+            "name": "Аскрипция"
         },
         "breadcrumbs": {
             "home": "Главная",
@@ -2284,7 +2359,11 @@
             "title": "Редактирование контактной информации"
         },
         "history": {
-            "title": "{{count}} отредактировано раз"
+            "title": "{{count}} отредактировано раз",
+            "from": "с сайта",
+            "modified_by": "Изменено",
+            "to": "на",
+            "you": "вы"
         },
         "personal": {
             "bsn": "BSN",
@@ -2504,7 +2583,8 @@
                 "sponsor": "Объявление в",
                 "title": "Название"
             },
-            "title": "Данные декларации"
+            "title": "Данные декларации",
+            "code": "Номер: #:код"
         },
         "empty": {
             "button": "Отправить купон",
@@ -2618,7 +2698,8 @@
                 "rejected": "Отказано",
                 "waiting": "Ожидание оплаты"
             }
-        }
+        },
+        "title": "Детали пополнения счета"
     },
     "reservations": {
         "breadcrumbs": {
@@ -2713,14 +2794,11 @@
         "disabled": "Инвалид",
         "enable": "Включить",
         "enabled_on": "Включено: ",
-        "error": "Ошибка",
-        "failed": "Не удалось!",
         "municipality_restrict": "Эти настройки не могут быть изменены из-за условий, установленных муниципалитетом",
         "number_confirmed": "Число подтвержденных",
         "remember_ip": "Запомнить IP-адрес",
         "require_2fa_always": "Всегда требуйте подтверждения с помощью 2FA",
         "require_2fa_ip": "Если IP-адрес использовался в течение последних 48 часов, не требуйте 2FA.",
-        "saved": "Спасен!",
         "settings": "Настройки",
         "sms_message": "SMS-сообщение",
         "subtitle": "Добавьте дополнительный уровень безопасности к своей учетной записи, включив двухфакторную аутентификацию. Вы можете выбрать один из следующих методов аутентификации: Приложение Authenticator и SMS-аутентификация.",
@@ -2758,7 +2836,8 @@
             "provider": "Среда управления поставщиками",
             "sponsor": "Среда спонсорского управления",
             "validator": "Среда управления оценщиками",
-            "webshop": "Веб-магазин"
+            "webshop": "Веб-магазин",
+            "me_app": "Me-app"
         },
         "details": {
             "last_activity": "Последняя активность",
@@ -2883,7 +2962,11 @@
             "btn": "Посмотреть все результаты",
             "funds_label": "Кредит",
             "products_label": "Предложение",
-            "providers_label": "Провайдеры"
+            "providers_label": "Провайдеры",
+            "found_results": "{{count}} результаты найдены..."
+        },
+        "aria": {
+            "close_search": "Удалить поиск"
         }
     },
     "top_navbar": {
@@ -3070,8 +3153,13 @@
             "reimbursements": "Возмещение затрат",
             "reservations": "Бронирование",
             "security_2fa": "Безопасность",
-            "security_sessions": "Сессии"
-        }
+            "security_sessions": "Сессии",
+            "aria_label": "Меню пользователя",
+            "title": "Личный"
+        },
+        "main_menu": "Главное меню",
+        "open_home": "Назад к главной странице",
+        "start": "Начало"
     },
     "voucher_printable": {
         "budget_voucher": {
@@ -3162,7 +3250,8 @@
             "popup_form": {
                 "description": "Вы можете отменить бронирование, чтобы отказаться от покупки. Если вы не хотите отменять покупку, нажмите \"закрыть\".",
                 "title": "Хотите отменить бронирование до покупки?"
-            }
+            },
+            "title": "Отменить бронирование"
         },
         "history": {
             "status": {
@@ -3334,7 +3423,8 @@
         "download_pdf": "Скачать как PDF",
         "total_amount": "Общая сумма",
         "total_offers": "Общее предложение",
-        "your_data": "Ваши данные"
+        "your_data": "Ваши данные",
+        "record_required": "{{ title }} Поле является обязательным для заполнения."
     },
     "navbar": {
         "vergoedingen": {
@@ -3346,5 +3436,59 @@
         "goereeoverflakkee": {
             "funds": "Схемы"
         }
+    },
+    "cookie_banner": {
+        "accept_all": "Смиритесь и двигайтесь дальше",
+        "analytics": "Аналитические файлы cookie",
+        "analytics_description": "Этот сайт использует аналитические файлы cookie для сбора анонимной статистики о том, как посетители используют наш сайт. Эта информация помогает нам улучшить сайт и сделать его более удобным для пользователей.",
+        "description": "Этот сайт использует файлы cookie для улучшения общего впечатления пользователей. Нажимая кнопку \"Принять и продолжить\", вы соглашаетесь с использованием файлов cookie, как описано в Положении о конфиденциальности.",
+        "functional_only": "Требуется только для веб-сайта",
+        "local_storage": "Локальное хранилище",
+        "local_storage_description": "Локальное хранилище используется для обеспечения правильного функционирования веб-сайта и сохранения входа пользователей в систему.",
+        "manage_cookies": "Управление файлами cookie",
+        "privacy_policy": "Заявление о конфиденциальности",
+        "settings": "Настройки файлов cookie",
+        "settings_description": "Этот сайт использует файлы cookie, чтобы сделать работу сайта максимально эффективной, улучшить впечатления пользователей и собрать анонимную статистику.",
+        "storage_info": "На этом сайте используются только локальные и аналитические файлы cookie:",
+        "title": "На этом сайте используются файлы cookie",
+        "view": "Посмотреть "
+    },
+    "logo_title": "На домашнюю страницу :host",
+    "push": {
+        "deleted": "Удалено!",
+        "error": "Не удалось!",
+        "fund_activation": {
+            "digid_success": "Вошел в систему с помощью DigiD.",
+            "success": "{имя_фонда} кредит активирован!"
+        },
+        "pre_check": {
+            "downloaded": "Загрузка начнется через несколько мгновений.",
+            "not_available": "Эта страница недоступна."
+        },
+        "preferences_emails": {
+            "verification_resent": "Снова отправлено письмо с подтверждением!"
+        },
+        "profile": {
+            "updated": "Информация была обновлена."
+        },
+        "reimbursement_edit": {
+            "saved": "Запрос на декларацию сохранен.",
+            "submitted": "Запрос на декларацию был отправлен на рассмотрение."
+        },
+        "reimbursement": {
+            "canceled": "Декларация отменена."
+        },
+        "reservation": {
+            "canceled": "Бронирование отменено."
+        },
+        "saved": "Спасен!",
+        "sessions": {
+            "terminated": "Прекращено!"
+        },
+        "success": "Успешно!"
+    },
+    "read_speaker": {
+        "read_aloud": "Читать для",
+        "tooltip": "Зачитывайте текст с помощью веб-ридера ReadSpeaker"
     }
 }
