--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -219,7 +219,10 @@
         },
         "title": "Мій список бажань",
         "view_grid": "Фотографії",
-        "view_list": "Список"
+        "view_list": "Список",
+        "breadcrumbs": {
+            "home": "Головна"
+        }
     },
     "buttons": {
         "add": "Додати",
@@ -463,7 +466,8 @@
             "description": "Зверніть увагу! Ви повинні заповнити форму заявки до <strong>{{value}}</strong>в іншому випадку увійдіть за допомогою DigiD і почніть заповнення анкети заново."
         },
         "buttons": {
-            "back": "Назад"
+            "back": "Назад",
+            "send": "Доставка"
         },
         "declined": {
             "no_note": "Нічого не записано.",
@@ -554,7 +558,8 @@
                 "criterion_same": "{{ name }} {{ value }} \"Має бути\".",
                 "footer": {
                     "next": "Наступний крок",
-                    "prev": "Попередній крок"
+                    "prev": "Попередній крок",
+                    "apply": "Запитайте"
                 },
                 "header_title": "Огляд",
                 "text": "Нам потрібно більше даних. Будь ласка, виконайте наступні кроки:"
@@ -569,6 +574,48 @@
             "subtitles": {
                 "step_1": "За допомогою цієї онлайн-форми ви можете подати заявку на отримання доступного фінансування. ",
                 "step_2": "Він перевіряє, чи ви вже відповідаєте умовам, і ви можете перерватися між ними і продовжити в інший час."
+            },
+            "fund_request_confirm_criteria": {
+                "confirm_income": "Підтвердьте свій дохід",
+                "confirm_meet_conditions": "Я заявляю, що відповідаю вищезазначеним умовам.",
+                "declare_conditions": "Ви збираєтеся подати заявку на участь у програмі. Вам потрібно задекларувати, що ви відповідаєте умовам.",
+                "processing_request": "Будь ласка, зачекайте хвилинку, запит обробляється.",
+                "provide_correct_info": "Я знаю, що надання недостовірної інформації карається, що я повинен повернути будь-яку винагороду, отриману неправомірно або надмірно, і що на мене можуть накласти штраф."
+            },
+            "fund_request_contact_info": {
+                "title": "Контактні дані"
+            },
+            "fund_request_email_setup": {
+                "continue_without_email": "Продовження без електронної пошти",
+                "email_required": "Щоб продовжити заповнення заявки, будь ласка, введіть свою електронну адресу",
+                "email_sent": "Електронний лист надіслано",
+                "email_sent_screen": "Підтвердження надіслано на електронну пошту",
+                "no_email_info": "Якщо ви не залишите адресу електронної пошти, ви не будете отримувати важливі повідомлення, такі як електронне повідомлення з QR-кодом або повідомлення про здійснення транзакції. Крім того, ви можете увійти в систему лише за допомогою DigiD.",
+                "sign_up_with_email": "Увійдіть за допомогою адреси електронної пошти",
+                "skip": "Пропустити.",
+                "warning": "Зауважте!"
+            },
+            "fund_request_overview": {
+                "application_summary": "Огляд запитів",
+                "check_information": "Будь ласка, перевірте нижче правильність введених вами даних. Ви можете повернутися до попередніх кроків за допомогою кнопки ",
+                "contact_info": "Вказані контактні дані:",
+                "correct_information": "Чи правильні дані? Тоді натисніть на кнопку ",
+                "none": "Ні.",
+                "previous_step": "Попередній крок.",
+                "submit_application": "Питання до."
+            },
+            "fund_request_step_criteria": {
+                "make_a_choice": "Виберіть один"
+            },
+            "fund_request_step_done": {
+                "application_processing": "Ваша заявка отримана. Заявка буде розглянута протягом 10 робочих днів. Ви отримаєте повідомлення про це електронною поштою.",
+                "application_received": "Заявка отримана",
+                "back": "Назад",
+                "error_occurred": "Виникла помилка при подачі заявки.",
+                "leave_form": "Бланк заяви на відпустку",
+                "reason": "Причина:",
+                "sent": "Відправлено!",
+                "sign_up": "Зареєструватися"
             }
         },
         "steps": {
@@ -595,7 +642,8 @@
         },
         "filters": {
             "active": "Активний",
-            "archive": "Архів"
+            "archive": "Архів",
+            "all_funds": "Всі титри..."
         },
         "title": "Запит"
     },
@@ -1266,7 +1314,8 @@
             "description": "Завантажте додаток Me з наведених нижче магазинів додатків. <a href=\"{{download_link}}\">Натисніть тут, щоб безпосередньо</a> відкрити <a href=\"{{download_link}}\">відповідний магазин додатків</a> на вашому телефоні або планшеті.",
             "title": "Завантажте Мене на телефон або планшет"
         },
-        "title": "Про додаток \"Я"
+        "title": "Про додаток \"Я",
+        "img_alt": "Me-app"
     },
     "meapp_index": {
         "buttons": {
@@ -1315,10 +1364,8 @@
         "enter_app_code": "Введіть 6-значний код у додатку",
         "enter_sms_code": "Введіть 6-значний SMS-код",
         "error_404": "Виникла помилка. Будь ласка, оновіть сторінку.",
-        "failed": "Не вийшло!",
         "resend_code": "Код для повторного відправлення",
         "seconds": "{час} секунда(и)",
-        "success": "Успішно!",
         "unknown_error": "Невідома помилка.",
         "verify": "Підтвердити"
     },
@@ -1344,7 +1391,6 @@
             "code_sent": "Щось пішло не так під час відправлення SMS. Чи правильний номер телефону введено? Якщо ні, спробуйте ще раз."
         },
         "extra_security": "Ваша двофакторна автентифікація була успішно налаштована. Ваш обліковий запис тепер додатково захищений.",
-        "failed": "Не вийшло!",
         "in_app_select": "У додатку виберіть",
         "link_phone": "Прив'яжіть свій номер телефону",
         "or": "Чи не буде",
@@ -1355,11 +1401,12 @@
         "select_auth_app": "Виберіть програму автентифікації, яку ви хочете використовувати.",
         "setup_2fa": "Налаштування двофакторної автентифікації",
         "setup_account": "Налаштуйте обліковий запис",
-        "success": "Успішно!",
         "successful_login": "Спрацювало!",
         "unknown_error": "Невідома помилка.",
         "verify": "Підтвердити",
-        "welcome_back": "Ви успішно увійшли за допомогою двофакторної автентифікації. З поверненням!"
+        "welcome_back": "Ви успішно увійшли за допомогою двофакторної автентифікації. З поверненням!",
+        "download_from_app_store": "App Store",
+        "download_from_play_store": "Play Store"
     },
     "modal_fund_help": {
         "chat": "Чат",
@@ -1380,7 +1427,6 @@
         "cancel": "Скасувати",
         "choose_another": "Виберіть інше зображення",
         "close": "Закрити",
-        "error": "Помилка!",
         "instructions": "Зліва ви побачите оригінальне зображення, а праворуч - приклади. Використовуйте поле на лівому зображенні, щоб розташувати зображення.",
         "invalid_file": "Завантажений файл не є дійсним зображенням, будь ласка, спробуйте завантажити інший файл.",
         "invalid_image": "Вибраний файл не є дійсним зображенням.",
@@ -1392,7 +1438,8 @@
         "rotate_right": "Поверніть на 90 градусів за годинниковою стрілкою",
         "some_invalid_files": "Деякі з вибраних файлів не є дійсними зображеннями і будуть пропущені.",
         "submit": "Надіслати",
-        "upload_document": "Завантажити документ"
+        "upload_document": "Завантажити документ",
+        "number": "Показати номер зображення: {{ number }}"
     },
     "modal_physical_card_unlink": {
         "body": {
@@ -1422,7 +1469,8 @@
             },
             "request_new_card": {
                 "confirm": "Підтвердити",
-                "order_by_email": "Замовляйте поштою"
+                "order_by_email": "Замовляйте поштою",
+                "cancel": "Скасувати"
             }
         },
         "modal_section": {
@@ -1445,7 +1493,11 @@
             "link_card": {
                 "description": "<br/><br/>На перепустці є QR-код, нижче - ваш особистий код. Якщо ви активуєте стару перепустку, ви можете продовжувати нею користуватися. Потрібна допомога?  Телефонуйте за номером 14 050 з понеділка по п'ятницю з 9.00 до 12.00.",
                 "subtitle": "Введіть свій персональний код клієнта",
-                "title": "Активуйте стару перепустку"
+                "title": "Активуйте стару перепустку",
+                "alt_text": "Фізичний пропуск: {{ fund_name }}",
+                "enter_physical_card_number": "Введіть номер фізичної картки",
+                "no_old_card": "Старої перепустки немає?",
+                "order_card": "Замовити перепустку"
             },
             "request_card_success": {
                 "description": "Ви отримали електронний лист з підтвердженням вашого замовлення.",
@@ -1637,7 +1689,8 @@
             "close": "Закрити",
             "description": "Ваше бронювання зроблено.",
             "title": "Спрацювало!"
-        }
+        },
+        "voucher_image_alt": "Кредит"
     },
     "modal": {
         "buttons": {
@@ -1646,7 +1699,26 @@
             "confirm": "Підтвердити"
         },
         "logout": {
-            "description": "Ви автоматично виходите з системи через 15 хвилин бездіяльності."
+            "description": "Ви автоматично виходите з системи через 15 хвилин бездіяльності.",
+            "confirm": "Логін",
+            "title": "Сесія закінчилася"
+        },
+        "email_voucher_to_me": {
+            "description": "Надішліть QR-код на мою електронну адресу",
+            "title": "Напишіть мені"
+        },
+        "session": {
+            "description": "Завершення сеансу може призвести до виходу з системи, хочете продовжити?",
+            "header": "Закінчення сесії",
+            "title": "Кінець сесії"
+        },
+        "sessions": {
+            "description": "Ви вийшли з системи на всіх пристроях, бажаєте продовжити?",
+            "title": "Завершити всі сеанси"
+        },
+        "share_voucher": {
+            "description": "Ви можете поділитися своїм бронюванням з провайдером, щоб уможливити дистанційну покупку. Якщо пропозиція стосується діяльності або послуги: введіть у поле нижче додаткову інформацію, необхідну постачальнику для участі, наприклад: ваше ім'я та номер телефону.",
+            "title": "Зверніть увагу! Будь ласка, надішліть повідомлення провайдеру, перш ніж ділитися QR-кодом."
         }
     },
     "not_found": {
@@ -2146,7 +2218,8 @@
             "potjeswijzer": {
                 "request": "Запит"
             },
-            "request": "Активувати"
+            "request": "Активувати",
+            "bookmark": "Додати до списку бажань"
         },
         "funds": {
             "fund": "Кредит:",
@@ -2268,7 +2341,9 @@
             "title": "Реквізити рахунку"
         },
         "bank_accounts": {
-            "title": "Банківський рахунок"
+            "title": "Банківський рахунок",
+            "iban": "IBAN",
+            "name": "Припис"
         },
         "breadcrumbs": {
             "home": "Головна сторінка",
@@ -2284,7 +2359,11 @@
             "title": "Редагувати контактну інформацію"
         },
         "history": {
-            "title": "{{count}} відредаговано разів"
+            "title": "{{count}} відредаговано разів",
+            "from": "від",
+            "modified_by": "Змінено",
+            "to": "до",
+            "you": "ти"
         },
         "personal": {
             "bsn": "BSN",
@@ -2504,7 +2583,8 @@
                 "sponsor": "Декларуючи за адресою",
                 "title": "Назва"
             },
-            "title": "Дані декларації"
+            "title": "Дані декларації",
+            "code": "Номер: #:код"
         },
         "empty": {
             "button": "Надіслати купон",
@@ -2618,7 +2698,8 @@
                 "rejected": "Відмовлено",
                 "waiting": "Чекаємо на оплату"
             }
-        }
+        },
+        "title": "Деталі поповнення"
     },
     "reservations": {
         "breadcrumbs": {
@@ -2713,14 +2794,11 @@
         "disabled": "Інваліди",
         "enable": "Увімкнути",
         "enabled_on": "Увімкнено: ",
-        "error": "Помилка.",
-        "failed": "Не вийшло!",
         "municipality_restrict": "Ці налаштування не можуть бути змінені через умови, встановлені муніципалітетом",
         "number_confirmed": "Номер підтверджено",
         "remember_ip": "Запам'ятати IP-адресу",
         "require_2fa_always": "Завжди вимагайте підтвердження за допомогою 2FA",
         "require_2fa_ip": "Якщо IP-адреса використовувалася протягом останніх 48 годин, 2FA не потрібна.",
-        "saved": "Врятовано!",
         "settings": "Налаштування",
         "sms_message": "SMS-повідомлення",
         "subtitle": "Додайте додатковий рівень безпеки до свого облікового запису, увімкнувши двофакторну автентифікацію. Ви можете вибрати один з наступних методів автентифікації: Додаток Authenticator та SMS-автентифікація.",
@@ -2758,7 +2836,8 @@
             "provider": "Середовище управління провайдерами",
             "sponsor": "Спонсорське середовище управління",
             "validator": "Середовище управління оцінювачами",
-            "webshop": "Інтернет-магазин"
+            "webshop": "Інтернет-магазин",
+            "me_app": "Me-app"
         },
         "details": {
             "last_activity": "Остання активність",
@@ -2883,7 +2962,11 @@
             "btn": "Переглянути всі результати",
             "funds_label": "Кредит",
             "products_label": "Пропозиція",
-            "providers_label": "Провайдери"
+            "providers_label": "Провайдери",
+            "found_results": "{{count}} Результати знайдено..."
+        },
+        "aria": {
+            "close_search": "Видалити пошук"
         }
     },
     "top_navbar": {
@@ -3070,8 +3153,13 @@
             "reimbursements": "Відшкодування витрат",
             "reservations": "Бронювання",
             "security_2fa": "Безпека",
-            "security_sessions": "Сесії"
-        }
+            "security_sessions": "Сесії",
+            "aria_label": "Меню користувача",
+            "title": "Особисте"
+        },
+        "main_menu": "Головне меню",
+        "open_home": "Повернутися на головну сторінку",
+        "start": "Старт"
     },
     "voucher_printable": {
         "budget_voucher": {
@@ -3162,7 +3250,8 @@
             "popup_form": {
                 "description": "Ви можете скасувати бронювання, щоб відмовитися від покупки. Якщо ви не бажаєте скасовувати цю покупку, натисніть \"закрити\".",
                 "title": "Хочете скасувати бронювання до покупки?"
-            }
+            },
+            "title": "Скасувати бронювання"
         },
         "history": {
             "status": {
@@ -3334,7 +3423,8 @@
         "download_pdf": "Завантажити у форматі PDF",
         "total_amount": "Загальна сума",
         "total_offers": "Загальна пропозиція",
-        "your_data": "Ваші дані"
+        "your_data": "Ваші дані",
+        "record_required": "{{ title }} Поле обов'язкове для заповнення."
     },
     "navbar": {
         "vergoedingen": {
@@ -3346,5 +3436,59 @@
         "goereeoverflakkee": {
             "funds": "Схеми"
         }
+    },
+    "cookie_banner": {
+        "accept_all": "Змиритися і рухатися далі",
+        "analytics": "Аналітичні файли cookie",
+        "analytics_description": "Цей сайт використовує аналітичні файли cookie для збору анонімної статистики про те, як відвідувачі використовують наш сайт. Ця інформація допомагає нам покращити сайт і зробити його більш зручним для користувачів.",
+        "description": "Цей веб-сайт використовує файли cookie для покращення загального користувацького досвіду. Натискаючи \"Прийняти та продовжити\", ви даєте згоду на використання файлів cookie, як описано в Заяві про конфіденційність.",
+        "functional_only": "Потрібно лише для веб-сайту",
+        "local_storage": "Локальне сховище",
+        "local_storage_description": "Локальне сховище використовується для забезпечення належного функціонування веб-сайту та збереження авторизації користувачів.",
+        "manage_cookies": "Керування файлами cookie",
+        "privacy_policy": "Заява про конфіденційність",
+        "settings": "Налаштування файлів cookie",
+        "settings_description": "Цей веб-сайт використовує файли cookie, щоб зробити його роботу максимально ефективною, покращити користувацький досвід і зібрати анонімну статистику.",
+        "storage_info": "Цей веб-сайт використовує лише локальні та аналітичні файли cookie:",
+        "title": "Цей веб-сайт використовує файли cookie",
+        "view": "Перегляньте "
+    },
+    "logo_title": "На домашню сторінку :host",
+    "push": {
+        "deleted": "Видалено!",
+        "error": "Не вийшло!",
+        "fund_activation": {
+            "digid_success": "Увійшов за допомогою DigiD.",
+            "success": "{Кредит активовано!"
+        },
+        "pre_check": {
+            "downloaded": "Завантаження почнеться за кілька хвилин.",
+            "not_available": "Ця сторінка недоступна."
+        },
+        "preferences_emails": {
+            "verification_resent": "Лист з підтвердженням надіслано повторно!"
+        },
+        "profile": {
+            "updated": "Інформацію оновлено."
+        },
+        "reimbursement_edit": {
+            "saved": "Запит на декларацію збережено.",
+            "submitted": "Декларацію подано на розгляд."
+        },
+        "reimbursement": {
+            "canceled": "Декларацію скасовано."
+        },
+        "reservation": {
+            "canceled": "Бронь скасовано."
+        },
+        "saved": "Врятовано!",
+        "sessions": {
+            "terminated": "Припинено!"
+        },
+        "success": "Успішно!"
+    },
+    "read_speaker": {
+        "read_aloud": "Читати для",
+        "tooltip": "Зачитайте текст за допомогою ReadSpeaker webReader"
     }
 }
